--- a/.config/alacritty/vim_config.toml
+++ b/.config/alacritty/vim_config.toml
@@ -1,4 +1,5 @@
-import = ["/home/fayez/.config/alacritty/themes/themes/nord.toml"]
+[general]
+import = ["/home/fayez/.config/alacritty/themes/catppuccin_macchiato.toml"]
 
 [window]
 opacity = 0.90
@@ -8,6 +9,6 @@ columns = 125
 lines = 37
 
 [font.normal]
-family = "JetBrainsMono Nerd Font"
+family = "RobotoMono Nerd Font"
 style = "Regular"
 
