--- a/Dockerfiles/docker_compose_gcc_dev_env.yaml
+++ b/Dockerfiles/docker_compose_gcc_dev_env.yaml
@@ -1,5 +1,11 @@
 services:
   gcc_dev_env:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+      args: 
+        UID: 1000
+        USER: fayez
     image: gcc_dev_env
     container_name: gcc_dev_env_cont
     network_mode: host
