--- a/Dockerfiles/docker_compose_gcc_dev_env.yaml
+++ b/Dockerfiles/docker_compose_gcc_dev_env.yaml
@@ -2,7 +2,7 @@ services:
   gcc_dev_env:
     build: 
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile_gcc_dev_env
       args: 
         UID: 1000
         USER: fayez
