--- a/Dockerfiles/Dockerfile_ros_humble_dev_env
+++ b/Dockerfiles/Dockerfile_ros_humble_dev_env
@@ -1,6 +1,5 @@
 FROM osrf/ros:humble-desktop-full
 
-
 # Basic Installs
 RUN apt-get update && apt upgrade -y \
     && apt-get install -y \
@@ -40,7 +39,6 @@ USER $USER
 # Source install neovim and alacritty 
 RUN (mkdir dotfiles && cd dotfiles && git clone https://github.com/unipolarautomation/dotfiles_uatech.git .)\
     && (rm .bashrc && cd dotfiles && stow . && source ./../.bashrc && source /etc/profile.d/bash_completion.sh) \
-    && git clone https://github.com/alacritty/alacritty-theme /home/$USER/.config/alacritty/themes \
     && git clone https://github.com/tmux-plugins/tpm /home/$USER/.tmux/plugins/tpm \
     && sudo apt-get install -y ninja-build gettext cmake unzip curl build-essential \
     cmake pkg-config libfreetype6-dev libfontconfig1-dev libxcb-xfixes0-dev libxkbcommon-dev python3\
@@ -48,7 +46,8 @@ RUN (mkdir dotfiles && cd dotfiles && git clone https://github.com/unipolarautom
 
 RUN mkdir gitclones && (cd gitclones \
     && git clone https://github.com/neovim/neovim \
-    && cd neovim && make CMAKE_BUILD_TYPE=RelWithDebInfo \
+    && cd neovim && git checkout stable \
+    && make CMAKE_BUILD_TYPE=Release \
     && sudo make install) 
 
 RUN (curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y\
