--- a/Dockerfiles/docker_compose_ros_jazzy_dev_env.yaml
+++ b/Dockerfiles/docker_compose_ros_jazzy_dev_env.yaml
@@ -1,19 +1,19 @@
 services:
-  ros_humble_dev_env:
+  ros_jazzy_dev_env:
     build: 
       context: .
-      dockerfile: Dockerfile_ros_humble_dev_env
+      dockerfile: Dockerfile_ros_jazzy_dev_env
       args: 
         UID: 1000
-        USER: fayez
-    image: ros_humble_dev_env
-    container_name: ros_humble_dev_env_cont
+        USER: ubuntu
+    image: ros_jazzy_dev_env
+    container_name: ros_jazzy_dev_env_cont
     network_mode: host
-    user: fayez
+    user: ubuntu
     environment:
       - DISPLAY=${DISPLAY}
     volumes:
-      - /home/fayez/Bugs/Rosjects/:/home/fayez/Bugs/Rosjects/:rw
+      - /home/fayez/Bugs/Rosjects/:/home/ubuntu/Bugs/Rosjects/:rw
       - /dev:/dev
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - /usr/share/fonts/:/usr/share/fonts/
@@ -27,4 +27,4 @@ services:
             - driver: nvidia
               count: 1
               capabilities: [gpu]
-
+    
