lots of changes. didn't keep track

--- a/Dockerfiles/python_ml_dev_env/Dockerfile
+++ b/Dockerfiles/python_ml_dev_env/Dockerfile
@@ -54,11 +54,11 @@ RUN mkdir gitclones && (cd gitclones \
     && make CMAKE_BUILD_TYPE=Release \
     && sudo make install) 
 
-# RUN (curl https://sh.rustup.rs -sSf | sh -s -- -y \
-#     && source $HOME/.cargo/env && cargo install alacritty) \
-#     && rm -rf gitclones \
-#     && sudo rm -rf /var/lib/apt/lists/* 
-#
+RUN (curl https://sh.rustup.rs -sSf | sh -s -- -y \
+    && source $HOME/.cargo/env && cargo install alacritty) \
+    && rm -rf gitclones \
+    && sudo rm -rf /var/lib/apt/lists/* 
+
 # to build the image
 # docker image build --build-arg UID=$UID --build-arg USER=$USER -t gcc_dev_env .
 
