--- a/Dockerfiles/gcc_dev_env/docker-compose.yaml
+++ b/Dockerfiles/gcc_dev_env/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   gcc_dev_env:
     build: 
       context: .
-      dockerfile: Dockerfile_gcc_dev_env
+      dockerfile: Dockerfile
       args: 
         UID: 1000
         USER: fayez
