--- a/Dockerfiles/ros_jazzy_dev_env/docker-compose.yaml
+++ b/Dockerfiles/ros_jazzy_dev_env/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   ros_jazzy_dev_env:
     build: 
       context: .
-      dockerfile: Dockerfile_ros_jazzy_dev_env
+      dockerfile: Dockerfile
       args: 
         UID: 1000
         USER: ubuntu
