added fzf and ripgrep to the installation list

--- a/Dockerfiles/espidf_microros_dev_env/Dockerfile
+++ b/Dockerfiles/espidf_microros_dev_env/Dockerfile
@@ -16,7 +16,9 @@ RUN apt-get update && apt upgrade -y \
     sudo \
     tmux \ 
     vim \
-    xclip 
+    xclip \
+    fzf \
+    ripgrep
 
 ARG UID 
 ARG USER
