--- a/Dockerfiles/ros_jazzy_dev_env/Dockerfile
+++ b/Dockerfiles/ros_jazzy_dev_env/Dockerfile
@@ -17,7 +17,9 @@ RUN apt-get update && apt upgrade -y \
     sudo \
     tmux \ 
     vim \
-    xclip 
+    xclip \
+    fzf \
+    ripgrep
 
 ARG UID 
 ARG USER
