added fzf install command in Dockerfile. added launch_yazi() function

--- a/Dockerfiles/python_ml_dev_env/Dockerfile
+++ b/Dockerfiles/python_ml_dev_env/Dockerfile
@@ -19,8 +19,11 @@ RUN apt-get update && apt upgrade -y \
     xclip \
     pkg-config \
     libxkbcommon-dev \
-    fzf \
     ripgrep
+
+RUN (cd /bin/ \ 
+    && wget -c https://github.com/junegunn/fzf/releases/download/v0.62.0/fzf-0.62.0-linux_amd64.tar.gz -O - | tar -xz)
+
 
 ARG UID 
 ARG USER
