--- a/Dockerfiles/python_ml_dev_env/docker-compose.yaml
+++ b/Dockerfiles/python_ml_dev_env/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
     user: ubuntu
     environment:
       - DISPLAY=${DISPLAY}
+      - XDG_RUNTIME_DIR=${XDG_RUNTIME_DIR}
     volumes:
       - /home/fayez/Bugs/PythonWorks/:/home/ubuntu/Bugs/PythonWorks/:rw
       - /dev:/dev
