configured conform.nvim for c, cpp and python

--- a/Dockerfiles/gcc_dev_env/docker-compose.yaml
+++ b/Dockerfiles/gcc_dev_env/docker-compose.yaml
@@ -18,4 +18,7 @@ services:
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - /usr/share/fonts/:/usr/share/fonts/
 
+    tty: true
+    command: "/bin/bash"
+
 
