changed .bashrc, plugins/init.lua
.bashrc -> added alias cf : to navigate to a directory
plugins/init.lua -> added markview plugin for nvim

--- a/Dockerfiles/gcc_dev_env/Dockerfile
+++ b/Dockerfiles/gcc_dev_env/Dockerfile
@@ -17,8 +17,10 @@ RUN apt-get update && apt upgrade -y \
     tmux \ 
     vim \
     xclip \
-    ripgrep
-    
+    ripgrep \
+    libxkbcommon-x11-0
+
+# installing fzf    
 RUN (cd /bin/ \ 
     && wget -c https://github.com/junegunn/fzf/releases/download/v0.62.0/fzf-0.62.0-linux_amd64.tar.gz -O - | tar -xz)
 
