--- a/.config/alacritty/vim_config.toml
+++ b/.config/alacritty/vim_config.toml
@@ -8,6 +8,9 @@ opacity = 0.95
 columns = 125
 lines = 37
 
+[font]
+size = 12
+
 [font.normal]
 family = "FiraCode Nerd Font Mono"
 style = "Regular"
