minor change in yazi.toml file

--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -13,5 +13,5 @@ open_in_new_window = [
 
 [open]
 append_rules = [
-    { name = "*", use = ["edit", "open_in_new_window"]}
+    { name = "*", use = ["edit", "open", "reveal", "open_in_new_window"]}
 ]
