--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,7 @@ set -g status-left-length 40
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tonylambiris/palenight-tmux'
 run '~/.tmux/plugins/tpm/tpm'
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
