--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -2,7 +2,8 @@
 import = ["/home/fayez/.config/alacritty/themes/palenight.toml"]
 
 [window]
-opacity = 0.85
+opacity = 0.95
+decorations = "None"
 
 [font]
 size = 11.5
@@ -12,5 +13,6 @@ family = "FiraCode Nerd Font Mono"
 style = "Regular"
 
 [window.dimensions]
-columns = 105
-lines = 25
+columns = 110
+lines = 27
+
