added clang-format to be installed in todo_in_new_system

--- a/.config/alacritty/vim_config.toml
+++ b/.config/alacritty/vim_config.toml
@@ -3,6 +3,7 @@ import = ["/home/fayez/.config/alacritty/themes/palenight.toml"]
 
 [window]
 opacity = 0.95
+decorations = "None"
 
 [window.dimensions]
 columns = 125
