--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@ set -g default-terminal "screen-256color"
 set -g base-index 1
 set-option -a terminal-features 'xterm:RGB'
 # use C-f for the prefix
-set-option -g prefix C-f
+# set-option -g prefix C-f
 
 # easy config reload 
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.config reloaded."
@@ -11,8 +11,8 @@ bind-key r source-file ~/.tmux.conf \; display-message "tmux.config reloaded."
 set -g mouse on
 
 # set easier window split keys
-bind-key v split-window -h
-bind-key H split-window -v
+# bind-key v split-window -h
+# bind-key H split-window -v
 
 # Vim-like keybindings for pane navigation
 # unbind-key h
@@ -28,12 +28,12 @@ bind-key H split-window -v
 # synchronize panes
 bind-key y set-window-option synchronize-panes\; display-message "synchronize mode toggled."
 
-set -g status-fg colour227
-set -g status-bg colour235
+# set -g status-fg colour227
+# set -g status-bg colour235
 
-set-window-option -g window-status-current-style "bg=colour220,fg=colour232"
+# set-window-option -g window-status-current-style "bg=colour220,fg=colour232"
 
-set -g status-left-length 40
+set -g status-left-length 50
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
