--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -3,5 +3,7 @@ bold-is-bright = true
 cursor-style = block
 cursor-style-blink = false
 background-opacity = 0.9
+shell-integration-features = no-cursor
 
 gtk-titlebar = false
+window-decoration=false
