--- a/Dockerfiles/ros_humble_dev_env/docker-compose.yaml
+++ b/Dockerfiles/ros_humble_dev_env/docker-compose.yaml
@@ -11,12 +11,14 @@ services:
     network_mode: host
     user: humble_turtle
     environment:
-      - DISPLAY=${DISPLAY}
+      - XDG_RUNTIME_DIR=/tmp/runtime-humble_turtle
+      - WAYLAND_DISPLAY=${WAYLAND_DISPLAY}
+      - QT_QPA_PLATFORM=wayland #helps qt-based apps like rviz,rqt
     volumes:
       - /home/fayez/Bugs/Rosjects/:/home/humble_turtle/Bugs/Rosjects/:rw
       - /dev:/dev
-      - /tmp/.X11-unix:/tmp/.X11-unix:rw
-      - /usr/share/fonts/:/usr/share/fonts/
+      - ${XDG_RUNTIME_DIR}/${WAYLAND_DISPLAY}:/tmp/runtime-humble_turtle/${WAYLAND_DISPLAY}
+      # - /tmp/.X11-unix:/tmp/.X11-unix:rw
     tty: true
     command: "/bin/bash"
     runtime: nvidia
