added installation candidate for texlive-(base, bibtex-extra, science)

--- a/Dockerfiles/latex_dev_env/Dockerfile
+++ b/Dockerfiles/latex_dev_env/Dockerfile
@@ -25,7 +25,9 @@ RUN apt update && apt upgrade -y \
     stow \
     sudo \
     tmux \
-    texlive \
+    texlive-base \
+    texlive-bibtex-extra \
+    texlive-science \
     vim \
     xclip \
     unzip \
