added installation target nvidia-container-toolkit
needed to reconfigure runtime setting for running containers with gpu.

--- a/.config/noctalia/settings.json
+++ b/.config/noctalia/settings.json
@@ -231,7 +231,7 @@
     },
     "colorSchemes": {
         "darkMode": true,
-        "generationMethod": "tonal-spot",
+        "generationMethod": "monochrome",
         "manualSunrise": "06:30",
         "manualSunset": "18:30",
         "monitorForColors": "",
