--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,8 @@ bind-key r source-file ~/.tmux.conf \; display-message "tmux.config reloaded."
 
 # mouse mode 
 set -g mouse on
+# vi mode (CTRL+b + [)
+set-window-option -g mode-keys vi
 
 # set easier window split keys
 # bind-key v split-window -h
