refactored ros_humble image to function in wayland
- installs qtwayland5
- uses xda as qt_platform

--- a/Dockerfiles/ros_humble_dev_env/Dockerfile
+++ b/Dockerfiles/ros_humble_dev_env/Dockerfile
@@ -26,6 +26,7 @@ RUN apt-get update && apt upgrade -y \
     pkg-config \
     python3 \
     python3-venv \
+    qtwayland5 \
     ripgrep \
     stow \
     sudo \
